add specific routing scheme